--- a/src/app/managing/create-account/create-account.component.html
+++ b/src/app/managing/create-account/create-account.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid">
   <form [formGroup]="form" class="form center-vertical text-left">
 
+    <!-- ================================================================== -->
+    <!-- == CASES FOR MANAGING PROVIDER AND ACCOUNT SELECTION STRATEGIES == -->
+    <!-- ================================================================== -->
     <ng-container *ngIf="!providerSelected">
       <h1>Choose your Provider</h1>
       <p>To define your Access Strategy, select the Cloud Provider you need to connect to</p>
@@ -32,15 +35,15 @@
       <div class="form-group" style="width: 100%; display: inline-block;">
         <label>My Access Strategy is:</label>
         <br>
-        <ng-container *ngIf="accountType === undefined">
+        <ng-container *ngIf="sessionType === undefined">
             <div class="correct-top">
-              <button type="button" class="providers {{accountType === eAccountType.awsFederated ? 'selected' : ''}}" (click)="hasSsoUrl = true; setAccessStrategy(eAccountType.awsFederated);">
+              <button type="button" class="providers {{sessionType === eAccountType.awsFederated ? 'selected' : ''}}" (click)="hasSsoUrl = true; setAccessStrategy(eAccountType.awsFederated);">
                 <i class="fa fa-info" tooltip="This is a set of option to create federated accounts"></i> Federated
               </button>
-              <button type="button" class="providers {{accountType === eAccountType.awsPlain ? 'selected' : ''}}" (click)="setAccessStrategy(eAccountType.awsPlain);">
+              <button type="button" class="providers {{sessionType === eAccountType.awsPlain ? 'selected' : ''}}" (click)="setAccessStrategy(eAccountType.awsPlain);">
                 <i class="fa fa-info" tooltip="This is a set of option to create plain accounts"></i> Plain
               </button>
-              <button type="button" class="providers {{accountType === eAccountType.awsTruster ? 'selected' : ''}}" (click)="setAccessStrategy(eAccountType.awsTruster);" *ngIf="!firstTime">
+              <button type="button" class="providers {{sessionType === eAccountType.awsTruster ? 'selected' : ''}}" (click)="setAccessStrategy(eAccountType.awsTruster);" *ngIf="!firstTime">
                 <i class="fa fa-info" tooltip="This is a set of option to create truster accounts"></i> Truster
               </button>
               <span class="providers disabled second-step-fix" *ngIf="firstTime" tooltip="You need at least one Federated or Plain aws account to unlock this feature.">
@@ -50,35 +53,49 @@
         </ng-container>
       </div>
     </ng-container>
+    <!-- ================================================================== -->
+    <!-- ================================================================== -->
+    <!-- ================================================================== -->
 
     <ng-container *ngIf="((provider !== eAccountType.awsFederated) || (hasSsoUrl && (provider === eAccountType.awsFederated))) && !typeSelection && providerSelected">
 
       <h1>Choose your Access Strategy</h1>
       <p class="smaller">I’m not sure of what’s my Access Strategy? Know more <a (click)="openAccessStrategyDocumentation();">here</a></p>
       <div style="width: 100%; display: inline-block;">
-        <ng-container *ngIf="accountType !== eAccountType.azure">
+        <!-- ================================================================== -->
+        <!-- ==                    LOGO FOR AWS ACCOUNTS ARE                 == -->
+        <!-- ================================================================== -->
+        <ng-container *ngIf="sessionType !== eAccountType.azure">
           <div class="form-group" style="width: 49%; display: inline-block;">
             <label>My Access Strategy is:</label>
             <br>
             <span class="providers">
-              <ng-container *ngIf="accountType === eAccountType.awsFederated"><i class="fa fa-info" tooltip="This is a set of option to create federated accounts"></i> Federated</ng-container>
-              <ng-container *ngIf="accountType === eAccountType.awsTruster"><i class="fa fa-info" tooltip="This is a set of option to create truster accounts"></i> Truster</ng-container>
-              <ng-container *ngIf="accountType === eAccountType.awsPlain"><i class="fa fa-info" tooltip="This is a set of option to create plain accounts"></i> Plain</ng-container>
+              <ng-container *ngIf="sessionType === eAccountType.awsFederated"><i class="fa fa-info" tooltip="This is a set of option to create federated accounts"></i> Federated</ng-container>
+              <ng-container *ngIf="sessionType === eAccountType.awsTruster"><i class="fa fa-info" tooltip="This is a set of option to create truster accounts"></i> Truster</ng-container>
+              <ng-container *ngIf="sessionType === eAccountType.awsPlain"><i class="fa fa-info" tooltip="This is a set of option to create plain accounts"></i> Plain</ng-container>
             </span>
             <br><br>
           </div>
         </ng-container>
-        <ng-container *ngIf="accountType === eAccountType.azure">
+
+        <!-- ================================================================== -->
+        <!-- ==                  LOGO FOR AZURE ACCOUNTS ARE                 == -->
+        <!-- ================================================================== -->
+        <ng-container *ngIf="sessionType === eAccountType.azure">
           <div class="form-group" style="width: 100%; display: inline-block">
             <label>My Access Strategy is:</label>
             <br>
             <span class="providers">
-              <ng-container *ngIf="accountType === eAccountType.azure"><i class="fa fa-info" tooltip="This is a set of option to create azure accounts"></i> Azure</ng-container>
+              <ng-container *ngIf="sessionType === eAccountType.azure"><i class="fa fa-info" tooltip="This is a set of option to create azure accounts"></i> Azure</ng-container>
             </span>
             <br><br>
           </div>
         </ng-container>
-        <ng-container *ngIf="accountType !== eAccountType.azure">
+
+        <!-- ================================================================== -->
+        <!-- ==                      PROFILE ID SELECTION                    == -->
+        <!-- ================================================================== -->
+        <ng-container *ngIf="sessionType !== eAccountType.azure">
           <div class="form-group" style="width: 2%; display: inline-block;"></div>
           <div class="form-group" style="width: 49%; display: inline-block;">
             <label>aws Profile<span class="danger-text">*</span></label>
@@ -93,42 +110,53 @@
         </ng-container>
       </div>
 
-      <div class="form-group d-inline-block" [ngStyle]="{width: accountType === eAccountType.awsFederated ? '49%' : '100%'}">
+      <!-- ================================================================== -->
+      <!-- ==              ACCOUNT ALIAS FOR ALL ACCOUNTS TYPE             == -->
+      <!-- ================================================================== -->
+      <div class="form-group d-inline-block" [ngStyle]="{width: sessionType === eAccountType.awsFederated ? '49%' : '100%'}">
         <label>Account Alias<span class="danger-text">*</span></label>
         <br>
         <input formControlName="name" type="text" class="form-control" placeholder="Account Alias *">
         <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert an Account Alias</small>
       </div>
-      <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="accountType === eAccountType.awsFederated"></div>
+      <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="sessionType === eAccountType.awsFederated"></div>
 
-      <ng-container *ngIf="accountType !== eAccountType.azure">
-        <!-- ====================== -->
-        <!-- aws ACCOUNT PROPERTIES -->
-        <!-- ====================== -->
-        <div class="form-group" style="width: 49%; display: inline-block;">
+      <!-- ====================== -->
+      <!-- AWS ACCOUNT PROPERTIES -->
+      <!-- ====================== -->
+      <ng-container *ngIf="sessionType !== eAccountType.azure">
+        <!-- ================================================================== -->
+        <!-- ==                   ACCOUNT NUMBER FEDERATED                   == -->
+        <!-- ================================================================== -->
+        <div class="form-group" style="width: 49%; display: inline-block;" *ngIf="sessionType === eAccountType.awsFederated">
           <label>Account Number<span class="danger-text">*</span></label>
           <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *">
           <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
         </div>
+        <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="sessionType === eAccountType.awsFederated"></div>
 
-        <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="accountType === eAccountType.awsTruster"></div>
-
-        <div class="form-group" style="width: 49%; display: inline-block;" *ngIf="accountType !== eAccountType.awsPlain">
-          <label>Role<span class="danger-text">*</span></label>
-          <input formControlName="role" type="text" class="form-control" placeholder="Role name" />
-          <small class="text-error" *ngIf="(form.controls['role'].dirty || form.controls['role'].touched) && form.controls['role'].errors">Insert the Role</small>
+        <!-- ================================================================== -->
+        <!-- ==                       ROLE ARN TRUSTER                       == -->
+        <!-- ================================================================== -->
+        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eAccountType.awsTruster">
+          <label>RoleArn<span class="danger-text">*</span></label>
+          <input formControlName="roleArn" type="text" class="form-control" placeholder="Role ARN" />
+          <small class="text-error" *ngIf="(form.controls['roleArn'].dirty || form.controls['roleArn'].touched) && form.controls['roleArn'].errors">Insert the Role ARN</small>
         </div>
 
-        <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="accountType !== eAccountType.awsTruster"></div>
-
-        <div class="form-group" style="width: 49%; display: inline-block;">
+        <!-- ================================================================== -->
+        <!-- ==                        AWS REGION ALL                        == -->
+        <!-- ================================================================== -->
+        <div class="form-group" [ngStyle]="{display: 'inline-block', width: sessionType === eAccountType.awsFederated ? '49%': '100%'}">
           <label>aws Region</label>
           <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
         </div>
 
-        <ng-container *ngIf="accountType === eAccountType.awsFederated">
+        <!-- ================================================================== -->
+        <!-- ==                 SAML & IDP ARN FOR FEDERATED                 == -->
+        <!-- ================================================================== -->
+        <ng-container *ngIf="sessionType === eAccountType.awsFederated">
           <h2>Federated setting</h2>
-
           <div class="form-group" style="width: 100%; display: inline-block;">
             <label>SAML 2.0 Url<span class="danger-text">*</span></label>
             <ng-select [items]="idps"
@@ -147,20 +175,18 @@
           </div>
         </ng-container>
 
-        <div class="form-group" style="width: 49%; display: inline-block;" *ngIf="accountType === eAccountType.awsPlain">
-          <label>User<span class="danger-text">*</span></label>
-          <input formControlName="plainUser" type="text" class="form-control" placeholder="User name" />
-          <small class="text-error" *ngIf="(form.controls['plainUser'].dirty || form.controls['plainUser'].touched) && form.controls['plainUser'].errors">Insert the User</small>
-        </div>
-
-        <div class="form-group" style="width: 2%; display: inline-block; position: relative; top: -1px;" *ngIf="accountType === eAccountType.awsPlain"></div>
-
-        <div class="form-group" style="width: 49%; display: inline-block;" *ngIf="accountType === eAccountType.awsPlain">
+        <!-- ================================================================== -->
+        <!-- ==                         MFA DEVICE ARN                       == -->
+        <!-- ================================================================== -->
+        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eAccountType.awsPlain">
           <label>Mfa Device</label>
           <input formControlName="mfaDevice" type="text" class="form-control" placeholder="MFA arn or SN (optional)" />
         </div>
 
-        <ng-container *ngIf="accountType === eAccountType.awsPlain">
+        <!-- ================================================================== -->
+        <!-- ==                      SECRET & ACCESS KEYS                    == -->
+        <!-- ================================================================== -->
+        <ng-container *ngIf="sessionType === eAccountType.awsPlain">
           <h2>Add secret</h2>
           <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
             <label style="margin-bottom: 0;">Access  Key<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="Add access key"></i></label>
@@ -173,30 +199,24 @@
             <label style="margin-bottom: 0;">Secret Key<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="Add secret key"></i></label>
             <input formControlName="secretKey" type="text" class="form-control" placeholder="Secret Key *">
           </div>
-
         </ng-container>
 
-        <ng-container *ngIf="accountType === eAccountType.awsTruster">
+        <!-- ================================================================== -->
+        <!-- ==                       ASSUMABLE SESSION                      == -->
+        <!-- ================================================================== -->
+        <ng-container *ngIf="sessionType === eAccountType.awsTruster">
           <h2>Truster setting</h2>
-          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
-            <label style="margin-bottom: 0;">Starting Account<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
-            <ng-select class="mt-2" formControlName="federatedAccount" bindLabel="accountName" bindValue="session" dropdownPosition="top" [items]="federatedAccounts" [(ngModel)]="selectedSession" (change)="getFedRoles();" [disabled]="true"></ng-select>
+          <div class="form-group" style="width: 100%; display: inline-block; position: relative; top: -1px;" >
+            <label style="margin-bottom: 0;">Assumable Account<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This is the account used to make AssumeRole on the Truster Account"></i></label>
+            <ng-select class="mt-2" formControlName="assumableAccount" bindLabel="accountName" bindValue="session" dropdownPosition="top" [items]="assumableAccounts" [(ngModel)]="selectedSession" [disabled]="true"></ng-select>
           </div>
-
-          <div style="width: 2%; height: 1px; display: inline-block;"></div>
-
-          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;">
-            <label style="margin-bottom: 0;">Starting Role<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
-            <ng-select class="mt-2" formControlName="federatedRole" bindLabel="name" bindValue="name" dropdownPosition="top" [items]="federatedRoles" [(ngModel)]="selectedRole"></ng-select>
-          </div>
-
         </ng-container>
       </ng-container>
 
-      <ng-container *ngIf="accountType === eAccountType.azure">
-        <!-- ======================== -->
-        <!-- AZURE ACCOUNT PROPERTIES -->
-        <!-- ======================== -->
+      <!-- ================================================================= -->
+      <!-- ==                  AZURE ACCOUNT PROPERTIES                   == -->
+      <!-- ================================================================= -->
+      <ng-container *ngIf="sessionType === eAccountType.azure">
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label>Subscription Id<span class="danger-text">*</span></label>
           <input formControlName="subscriptionId" type="text" class="form-control" placeholder="Subscription Id *">
@@ -215,8 +235,10 @@
         </div>
       </ng-container>
 
-
-      <button type="button" (click)="saveSession();" [disabled]="!formValid()" [ngClass]="!formValid() ? 'pull-right disabled': 'pull-right'" *ngIf="accountType">Save</button>
+      <!-- ================================================================== -->
+      <!-- ==                             BUTTONS                          == -->
+      <!-- ================================================================== -->
+      <button type="button" (click)="saveSession();" [disabled]="!formValid()" [ngClass]="!formValid() ? 'pull-right disabled': 'pull-right'" *ngIf="sessionType">Save</button>
     </ng-container>
     <button type="button" (click)="goBack();" class="pull-left disabled">Back</button>
   </form>
