--- a/src/app/components/session/session/session.component.scss
+++ b/src/app/components/session/session/session.component.scss
@@ -72,7 +72,7 @@
 .search-bar {
   background: white;
   display: inline-block;
-  width: 245px;
+  width: 327px;
   border-radius: 5px;
   border: 2px solid white;
   height: 37px;
@@ -85,7 +85,7 @@
     border: none;
     outline: none;
     display: inline-block;
-    width: 86%;
+    width: 90%;
     position: relative;
   }
 
@@ -216,6 +216,14 @@ h3 {
 .fixed-status {
   position: absolute;
   right: 4px;
+  font-size: 11px;
+  top: 5px;
+  color: $text-color;
+}
+
+.fixed-profiles {
+  position: absolute;
+  right: 138px;
   font-size: 11px;
   top: 5px;
   color: $text-color;
